fixed spacing of login and register page so they look a bit nicer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -143,6 +143,7 @@ p{
     border-radius: 10px;
     background-color: rgba(87, 79, 77, 0.05);
     overflow: hidden;
+    text-transform: uppercase;
 }
 
 .book-card div{
